--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="temp_degrees">%.0f °C</string>
     <string name="search_label">Informe uma cidade para obter a previsão do tempo!</string>
     <string name="search">Buscar</string>
+    <string name="need_city_and_country">É necessário informar a cidade e o pais para realizar a consulta</string>
 </resources>
